Fix LOKit header compatibility - use #define macros instead of typedefs
The previous approach using typedef caused conflicts with Unit.hpp which
does `typedef struct _LibreOfficeKit LibreOfficeKit;`. Using #define macros
instead properly maps the struct tag names:
  struct _LibreOfficeKit -> struct LibreOfficeKitStruct
  struct _LibreOfficeKitDocument -> struct LibreOfficeKitDocumentStruct

--- a/docker/Dockerfile.document.25
+++ b/docker/Dockerfile.document.25
@@ -86,10 +86,9 @@ RUN npm install --no-audit
 ARG LOKIT_HEADERS_URL=https://github.com/CollaboraOnline/online/releases/download/for-code-assets/LibreOfficeKit-includes-co-25.04.tar.gz
 RUN mkdir -p /build/lokit-headers \
     && curl -fsSL ${LOKIT_HEADERS_URL} | tar -xzf - -C /build/lokit-headers --strip-components=1 \
-    # Add compatibility typedefs for coolwsd 25.04 branch which expects _LibreOfficeKit struct names
-    && sed -i '/typedef struct LibreOfficeKitStruct LibreOfficeKit;/a typedef struct LibreOfficeKitStruct _LibreOfficeKit;' \
-        /build/lokit-headers/LibreOfficeKit/LibreOfficeKit.h \
-    && sed -i '/typedef struct LibreOfficeKitDocumentStruct LibreOfficeKitDocument;/a typedef struct LibreOfficeKitDocumentStruct _LibreOfficeKitDocument;' \
+    # Add compatibility macros for coolwsd 25.04 branch which expects _LibreOfficeKit struct tag names
+    # These #define macros map old struct tags to new ones (e.g., struct _LibreOfficeKit -> struct LibreOfficeKitStruct)
+    && sed -i '/#define INCLUDED_LIBREOFFICEKIT_LIBREOFFICEKIT_H/a #define _LibreOfficeKit LibreOfficeKitStruct\n#define _LibreOfficeKitDocument LibreOfficeKitDocumentStruct' \
         /build/lokit-headers/LibreOfficeKit/LibreOfficeKit.h
 
 # Build coolwsd from source with production optimizations
