Add custom fonts for multi-language document support
Added 55 fonts (12 MB) to support:

Western fonts:
- Aptos (7 variants) - new MS Office default
- Carlito (Calibri alternative)
- Caladea (Cambria alternative)
- Cousine (Consolas alternative)
- EB Garamond (Garamond alternative)
- Noto Sans/Serif (Verdana/Georgia alternatives)

Arabic fonts:
- Noto Sans Arabic, Noto Naskh Arabic
- Dubai

Indian regional scripts:
- Devanagari (Hindi), Bengali, Telugu, Tamil
- Gujarati, Gurmukhi (Punjabi), Kannada
- Malayalam, Oriya

Fonts are copied to /opt/collaboraoffice/share/fonts/truetype/
in all three prebuilt Dockerfiles.

--- a/docker/Dockerfile.document.prebuilt
+++ b/docker/Dockerfile.document.prebuilt
@@ -115,6 +115,10 @@ RUN echo "Downloading prebuilt coolwsd artifacts: ${COOLWSD_VERSION}" \
     && rm -rf /tmp/coolwsd-teamsync-* \
     && echo "Prebuilt coolwsd installed successfully"
 
+# Copy custom fonts (Aptos, Noto, Carlito, Caladea, etc.)
+# Includes: Western fonts, Arabic fonts, Indian regional scripts
+COPY docker/fonts/truetype/*.ttf /opt/collaboraoffice/share/fonts/truetype/
+
 # Build fontconfig cache
 RUN fc-cache -fv
 
